Opened 13 years ago
Closed 13 years ago
#2811 closed defect (fixed)
error shown for h264 I-frame
| Reported by: | Carl Eugen Hoyos | Owned by: | |
|---|---|---|---|
| Priority: | minor | Component: | avcodec |
| Version: | git-master | Keywords: | regression h264 |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description (last modified by )
http://thread.gmane.org/gmane.comp.video.ffmpeg.user/44281/focus=46797
A user uploaded a transport stream recorded with a Panasonic AG-HMC150 camera for which FFmpeg shows an error message (only) when decoding the first frame (an I-frame, not an IDR-frame).
The same error is shown when only reading the raw I-frame since d9ced9f (related to ticket #711), the frame can be decoded with the reference decoder (bit-identical with FFmpeg).
$ ffmpeg -i 00005.mts.Iframe.264 ^C
cehoyos@lisbeth:~/test/cehoyos/Samples/users> mv 00005.mts.Iframe.264 Iframe.264
cehoyos@lisbeth:~/test/cehoyos/Samples/users> ~/test/cehoyos/FFmpeg/ffmpeg -i Iframe.264
ffmpeg version N-54946-gaf2a196 Copyright (c) 2000-2013 the FFmpeg developers
built on Jul 26 2013 15:31:59 with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl --disable-indev=jack
libavutil 52. 40.100 / 52. 40.100
libavcodec 55. 19.100 / 55. 19.100
libavformat 55. 12.102 / 55. 12.102
libavdevice 55. 3.100 / 55. 3.100
libavfilter 3. 81.103 / 3. 81.103
libswscale 2. 4.100 / 2. 4.100
libswresample 0. 17.103 / 0. 17.103
libpostproc 52. 3.100 / 52. 3.100
[h264 @ 0x1c19be0] mmco: unref short failure
[h264 @ 0x1c19080] decoding for stream 0 failed
Input #0, h264, from 'Iframe.264':
Duration: N/A, bitrate: N/A
Stream #0:0: Video: h264 (High), yuv420p, 1280x720 [SAR 1:1 DAR 16:9], 50 tbr, 1200k tbn, 100 tbc
At least one output file must be specified
Attachments (1)
Change History (4)
by , 13 years ago
| Attachment: | Iframe.264 added |
|---|
comment:1 by , 13 years ago
| Description: | modified (diff) |
|---|
comment:2 by , 13 years ago
comment:3 by , 13 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



I have access to a Panasonic AG-HMC150 camera if additional samples are required.